# paradox-pydevdeps

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml  paradox-pycommon.key  release-drafter.yml
.github/workflows/: auto-tag.yml  changelog.yaml  codeql.yml  hadolint.yml  release-draft.yml  shellcheck.yml
.security_config/: policy_config.yaml  security_config.yaml  security_contact.yaml
styleguide/: flake8.toml  flakehell.toml  isort.toml  nitpick-style.toml  poetry.toml  pyright.toml  styleguide.toml
