[tool.poetry]
    authors = ["Paradox Engineer <engineering@paradox.ai>"]
    classifiers = [
        "Programming Language :: Python :: 3.11.7",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]
    description = "Paradox python dev dependencies."
    homepage = "https://olivia.paradox.ai"
    keywords = ["Paradox", "Olivia", "Artificial Intelligence"]
    license = "BSL-1.0"
    maintainers = ["PhuongTMR <phuong.nguyen@paradox.ai>"]
    name = "paradox-pydevdeps"
    packages = [{include = "styleguide"}]
    readme = "README.md"
    repository = "https://github.com/ParadoxAi/paradox-pydevdeps"
    version = "1.0.1"

    [tool.poetry.dependencies]
        python = "^3.11.7"

        bandit      = ">=1.7.6"
        curlify     = ">=2.2.1"
        flake8      = ">=6.0.1"
        ipython     = ">=8.19.0"
        jedi        = ">=0.19.1"
        pep8-naming = ">=0.13.3"
        pre-commit  = ">=3.6.0"
        pyright     = ">=1.1.342"
        virtualenv  = ">=20.25.0"

        django                  = {version = "4.2.8", optional = true}
        django-coverage-plugin  = {version = "^3.1.0", optional = true}
        django-debug-toolbar    = {version = "^4.2.0", optional = true}
        django-extra-checks     = {version = "^0.13.3", optional = true}
        django-migration-linter = {version = "^5.0.0", optional = true}
        django-querycount       = {version = "^0.8.3", optional = true}
        django-test-migrations  = {version = "^1.3.0", optional = true}
        django-types            = {version = "^0.19.1", optional = true}
        flake8-django           = {version = "^1.4", optional = true}
        pytest-django           = {version = "^4.7.0", optional = true}

        flake8-bugbear             = "^23.12.2"
        flake8-docstrings          = "^1.7.0"
        flake8-implicit-str-concat = "^0.4.0"
        flake8-pytest-style        = "^1.7.2"
        wemake-python-styleguide   = "^0.18.0"

        nitpick        = "^0.34.0"
        requests-cache = "1.1.1"

        pytest              = "^7.4.3"
        pytest-cov          = "^4.1.0"
        pytest-deadfixtures = "^2.2.1"
        pytest-factoryboy   = ">=2.6.0"
        pytest-randomly     = "^3.15.0"
        pytest-testmon      = "^2.1.0"
        pytest-timeout      = "^2.2.0"

        pytest-html  = ">=4.1.1"
        pytest-mock  = ">=3.12.0"
        pytest-xdist = ">=3.5.0"

        faker = ">=21.0.0"

        hypothesis = "^6.92.1"
        nplusone   = "^1.0.0"

        doc8                     = "^1.1.1"
        sphinx                   = "^7.2.6"
        sphinx-autodoc-typehints = "^1.25.2"
        tomlkit                  = "^0.12.3"

        dennis        = "^1.1.0"
        dotenv-linter = "^0.4.0"
        dump-env      = "^1.4.0"
        polint        = "^0.4"
        safety        = "^2.3.5"
        yamllint      = "^1.33.0"

    [tool.poetry.extras]
        django = [
            "django",
            "django-coverage-plugin",
            "django-debug-toolbar",
            "django-extra-checks",
            "django-migration-linter",
            "django-querycount",
            "django-test-migrations",
            "django-types",
            "flake8-django",
            "pytest-django",
        ]
        fastapi = []


[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core>=1.0.0"]
