[tool.poetry]
    authors = ["Paradox Engineer <engineering@paradox.ai>"]
    classifiers = [
        "Programming Language :: Python :: 3.11.7",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]
    description = "Paradox python dev dependencies."
    homepage = "https://olivia.paradox.ai"
    keywords = ["Paradox", "Olivia", "Artificial Intelligence"]
    license = "BSL-1.0"
    maintainers = ["PhuongTMR <phuong.nguyen@paradox.ai>"]
    name = "paradox-pydevdeps"
    packages = [{include = "styleguide"}]
    readme = "README.md"
    repository = "https://github.com/ParadoxAi/paradox-pydevdeps"
    version = "2024.05.07"

    [tool.poetry.dependencies]
        python     = "^3.11.7"
        virtualenv = "20.29.3"

        # Code Quality
        bandit      = ">=1.7.8"
        curlify     = ">=3.0"
        flake8      = ">=7.3"
        ipython     = ">=9.3"
        jedi        = ">=0.19.1"
        pep8-naming = ">=0.15.1"
        pre-commit  = ">=4.2"
        pyright     = ">=1.1.360"

        django                  = {version = "4.2.25", optional = true}
        django-coverage-plugin  = {version = "^3.1", optional = true}
        django-debug-toolbar    = {version = "^5.1.0", optional = true}
        django-extra-checks     = {version = "^0.16.1", optional = true}
        django-migration-linter = {version = "^5.1", optional = true}
        django-querycount       = {version = "^0.8.3", optional = true}
        django-test-migrations  = {version = "^1.3", optional = true}
        django-types            = {version = "^0.21.0", optional = true}
        flake8-django-hhupd     = {version =  "^1.4.1", optional = true}
        pytest-django           = {version = "^4.8", optional = true}

        flake8-bugbear             = "^24.4.21"
        flake8-docstrings          = "^1.7.0"
        flake8-implicit-str-concat = "^0.5.0"
        flake8-pytest-style        = "^2.0"

        nitpick                  = "^0.35"
        requests-cache           = "^1.2.0"
        wemake-python-styleguide = "1.1.0"

        # Unit Tests
        allure-pytest       = "^2.13.5"
        coverage            = "7.8.0"
        faker               = ">=37.4.0"
        genbadge            = "^1.1.1"
        hypothesis          = "^6.100.1"
        nplusone            = "^1.0"
        pycrunch-trace      = "^0.2"
        pytest              = "^8.3.5"
        pytest-deadfixtures = "^2.2.1"
        pytest-factoryboy   = ">=2.7.0"
        pytest-html         = ">=4.1.1"
        pytest-mock         = ">=3.14.0"
        pytest-randomly     = "^3.15.0"
        pytest-reportportal = "^5.4.1"
        pytest-sugar        = "^1.0"
        pytest-testmon      = "^2.1.1"
        pytest-timeout      = "^2.3.1"
        pytest-xdist        = ">=3.5.0"
        tox                 = "4.15.1"

        # Docs
        doc8                     = "^2.0"
        sphinx                   = "^8.2.3"
        sphinx-autodoc-typehints = "^3.2.0"
        tomlkit                  = "^0.13.2"

        # Linter
        dennis        = "^1.1"
        dotenv-linter = "^0.7.0"
        dump-env      = "^1.5"
        polint        = "^0.5"
        safety        = "^3.1"
        yamllint      = "^1.35.1"

        # Debug tools
        debugpy = "^1.8.13"

    [tool.poetry.extras]
        django = [
            "django",
            "django-coverage-plugin",
            "django-debug-toolbar",
            "django-extra-checks",
            "django-migration-linter",
            "django-querycount",
            "django-test-migrations",
            "django-types",
            "pytest-django",
        ]
        fastapi = []

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core>=1.0.0"]
